# School_Projects

./: .gitignore  CMakeLists.txt  Deque.cpp  GeometryDashUML.drawio  List.cpp  README.md  RE_SM_Assistant.drawio  block.py  camera.py  level.py  main.py  player.py  requests.csv  tasks_map.csv  token.txt  user.py
cmake/: CodeCoverage.cmake
graphs/: dsm.dot  fdsm_inversed.dot  fdsm_minimised.dot  fdsm_regular.dot  parser.dot  sm.dot  sm_without_eps.dot
levels/: first_test
src/: CMakeLists.txt  RegularExpression.cpp  RegularExpression.h  SMGraph.cpp  SMGraph.h  StateMachine.cpp  StateMachine.h  main.cpp
src/graphs/: dsm.dot  fdsm.dot  fdsm_inversed.dot  fdsm_minimised.dot  fdsm_regular.dot  parser.dot  sm.dot  sm_without_eps.dot
test-RE/: CMakeLists.txt  TestRE.cpp  TestSM.cpp  all_classes.h  run_tests.cpp
